# agent-firewall

./: .gitignore  README.md  pyproject.toml
configs/: policy.yaml
docs/: index.md
examples/: demo_agent.py
integrations/opencode/: firewall_hook.py  firewall_wrapper.sh  install.sh  opencode.json  setup.sh
src/: __init__.py  cli.py
src/alerts/: __init__.py  feedback.py  logger.py  notifier.py
src/correlator/: __init__.py  rules.py  tracker.py
src/detection/: __init__.py  inspector.py  patterns.py
src/policy/: __init__.py  engine.py  models.py
src/proxy/: __init__.py  handlers.py  mcp_server.py  middleware.py  server.py
tests/: test_core.py  test_correlator.py  test_e2e.py  test_mcp_server.py  test_opencode_integration.py
