[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-firewall"
version = "0.2.0"
description = "Protection against AI agent prompt injection and data exfiltration"
readme = "README.md"
license = "MIT"
authors = [
    { name = "sixshot", email = "sixshot@proton.me" },
]
keywords = ["security", "ai", "agent", "firewall", "prompt-injection", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "mcp>=1.0.0",
]

[project.scripts]
agent-firewall = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"configs/policy.yaml" = "agent_firewall_configs/policy.yaml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
